pirogue-eve-collector (1.0.2) UNRELEASED; urgency=medium

  * Ship the daemon under /usr/sbin, without its .py suffix, and with the
    usual python3 shebang.

 -- Cyril Brulebois <cyril@debamax.com>  Tue, 26 Apr 2022 22:53:53 +0200

pirogue-eve-collector (1.0.1) unstable; urgency=medium

  * Fix installation scripts.

 -- U+039b <hello@pts-project.org>  Mon, 18 Apr 2022 13:03:11 +0200

pirogue-eve-collector (1.0.0) unstable; urgency=medium

  * Initial Release.

 -- U+039b <hello@pts-project.org>  Mon, 21 Feb 2022 15:41:06 +0100